# shaka

./: Cargo.toml  README.md  install.ps1  install.sh  publish.sh
.github/workflows/: release.yml
src/: config.rs  lib.rs  main.rs
src/render/: fish.rs  mod.rs  pwsh.rs  sh.rs
src/utils/: env_expand.rs  mod.rs
