[package]
name = "shaka"
version = "0.0.3"
edition = "2024"
description = "Generate shell aliases and functions from YAML/JSONC config files"
license = "MIT"
readme = "README.md"

[dependencies]
indexmap = "2"
jsonc-parser = { version = "0.26", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"
