[package]
name = "shaka"
edition = "2024"
version = "0.0.3"
readme = "README.md"
license = "MIT"
description = "Generate shell aliases and functions from YAML/JSONC config files"

[dependencies]
indexmap = "2"
jsonc-parser = { version = "0.26", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"
